# Minecraft_OpenGL

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Minecraft.sln  README.md  glad.c  main.c  main.h  shell.nix
Generators/Chunk/: BiomeGenerator.c  BiomeGenerator.h  ChunkGenerator.c  ChunkGenerator.h  ChunkManager.c  ChunkManager.h  Region.c  Region.h
Generators/Chunk/Headers/: BiomeGenerator.h  ChunkGenerator.h  ChunkHeaders.h  ChunkManager.h  Region.h
Generators/Noises/: NoiseStruct.c  NoiseStruct.h  SimplexNoise.c  SimplexNoise.h
Generators/Noises/Headers/: NoiseStruct.h  SimplexNoise.h
Minecraft/: Minecraft.vcxproj  Minecraft.vcxproj.filters
Minecraft/ProjectFiles/: Makefile  main.c
Minecraft/ProjectFiles/Generators/Chunk/: BiomeGenerator.c  ChunkGenerator.c  ChunkManager.c  Region.c
Minecraft/ProjectFiles/Generators/Chunk/Headers/: BiomeGenerator.h  ChunkGenerator.h  ChunkHeaders.h  ChunkManager.h  Region.h
Minecraft/ProjectFiles/Generators/Noises/: NoiseStruct.c  SimplexNoise.c
Minecraft/ProjectFiles/Generators/Noises/Headers/: NoiseStruct.h  NoisesHeaders.h  SimplexNoise.h
Minecraft/ProjectFiles/Physics/: Collisions.c  Ray.c
Minecraft/ProjectFiles/Physics/Headers/: Collisions.h  PhysicsHeaders.h
Minecraft/ProjectFiles/Player/: Camera.c  Controller.c  Destroy.c
Minecraft/ProjectFiles/Player/Headers/: Destroy.h  PlayerHeaders.h
Minecraft/ProjectFiles/Shaders/: BasicColor.frag  BasicVertices.vert  Shader.c
Minecraft/ProjectFiles/Shaders/Headers/: ShaderHeaders.h
Minecraft/ProjectFiles/Textures/: BitmapCreator.c  ColorMap.c  DrawNoise.c  TextureSet.c
Minecraft/ProjectFiles/Textures/Headers/: BitmapCreator.h  Block.h  ColorMap.h  DrawNoise.h  TextureSet.h
Minecraft/ProjectFiles/Utils/: Errors.c  FileUtils.c  List.c  TimeUtils.c
Minecraft/ProjectFiles/Utils/Headers/: List.h  UtilsHeaders.h
Physics/: Collisions.c  Collisions.h  Ray.c  Ray.h
Physics/Headers/: Ray.h
Player/: Camera.c  Camera.h  Controller.c  Controller.h  Destroy.c  Destroy.h
Player/Headers/: Camera.h  Controller.h
Scripts/: atlas_generator.py
Shaders/: BasicColor.frag  BasicVertices.vert  Shader.c  Shader.h
Shaders/Headers/: Shader.h
Textures/: BitmapCreator.c  BitmapCreator.h  Block.c  Block.h  BlockDef.c  BlockDef.h  ColorMap.c  ColorMap.h  DrawNoise.c  DrawNoise.h  TextureSet.c  TextureSet.h
Textures/Headers/: BitmapCreator.h  ColorMap.h  DrawNoise.h  TextureHeaders.h
Utils/: Errors.c  FileUtils.c  FileUtils.h  List.c  List.h  TimeUtils.c  TimeUtils.h
Utils/Headers/: Errors.h  FileUtils.h
opengl/cglm/: io.h
opengl/glad/: glad.c  glad.h
opengl/stb/: stb_image.h  stb_truetype.h
src/: main.c
src/Generators/Chunk/: BiomeGenerator.c  BiomeGenerator.h  ChunkGenerator.c  ChunkGenerator.h  ChunkManager.c  ChunkManager.h  Region.c  Region.h
src/Generators/Noises/: NoiseStruct.c  NoiseStruct.h  SimplexNoise.c  SimplexNoise.h
src/Physics/: Collisions.c  Collisions.h  Ray.c  Ray.h
src/Player/: Camera.c  Camera.h  Controller.c  Controller.h  Destroy.c  Destroy.h
src/Shaders/: BasicColor.frag  BasicVertices.vert  Shader.c  Shader.h
src/Textures/: BitmapCreator.h  Block.c  Block.h  ColorMap.c  ColorMap.h  DrawNoise.c  DrawNoise.h  TextureSet.c  TextureSet.h
src/Utils/: Errors.c  Errors.h  FileUtils.h  List.c  List.h  TimeUtils.c  TimeUtils.h
